--- a/drupal/config/sync/core.extension.yml
+++ b/drupal/config/sync/core.extension.yml
@@ -3,6 +3,7 @@ _core:
 module:
   admin_toolbar: 0
   announcements_feed: 0
+  apigee_edge: 0
   automated_cron: 0
   ban: 0
   big_pipe: 0
@@ -16,11 +17,13 @@ module:
   consumers: 0
   contact: 0
   contextual: 0
+  custom_event: 0
   datetime: 0
   dblog: 0
   decoupled_router: 0
   dynamic_page_cache: 0
   editor: 0
+  entity: 0
   field: 0
   field_ui: 0
   file: 0
@@ -32,6 +35,7 @@ module:
   jsonapi_extras: 0
   jsonapi_menu_items: 0
   jsonapi_resources: 0
+  key: 0
   link: 0
   login_security: 0
   menu_link_content: 0
