--- a/drupal/config/sync/core.extension.yml
+++ b/drupal/config/sync/core.extension.yml
@@ -26,6 +26,7 @@ module:
   history: 0
   image: 0
   jsonapi: 0
+  jsonapi_extras: 0
   link: 0
   media: 0
   media_library: 0
@@ -34,11 +35,17 @@ module:
   next: 0
   next_jsonapi: 0
   node: 0
+  openapi: 0
+  openapi_jsonapi: 0
+  openapi_ui: 0
+  openapi_ui_swagger: 0
   options: 0
   page_cache: 0
   path: 0
   path_alias: 0
   pgsql: 0
+  schemata: 0
+  schemata_json_schema: 0
   search: 0
   serialization: 0
   shortcut: 0
