--- a/drupal/config/sync/core.extension.yml
+++ b/drupal/config/sync/core.extension.yml
@@ -45,6 +45,15 @@ module:
   path: 0
   path_alias: 0
   pgsql: 0
+  purge: 0
+  purge_drush: 0
+  purge_processor_cron: 0
+  purge_processor_lateruntime: 0
+  purge_purger_http: 0
+  purge_purger_http_tagsheader: 0
+  purge_queuer_coretags: 0
+  purge_tokens: 0
+  purge_ui: 0
   redis: 0
   schemata: 0
   schemata_json_schema: 0
