--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     labels:
       - "traefik.http.routers.${PROJECT_NAME}_web.rule=Host(`${PROJECT_BASE_URL}`)"
     restart: always
+
     depends_on:
       - php
       - db
@@ -59,17 +60,15 @@ services:
   varnish:
     depends_on:
       - web
-    image: varnish:7.4
+    image: varnish:6.0
     volumes:
       - .docker/varnish/default.vcl:/etc/varnish/default.vcl:ro
     labels:
+      - "traefik.http.services.${PROJECT_NAME}_varnish.loadbalancer.server.port=6081"
       - "traefik.http.routers.${PROJECT_NAME}_varnish.rule=Host(`varnish.${PROJECT_BASE_URL}`)"
-      - traefik.enable=true
-      - traefik.http.routers.varnish-http.entrypoints=web
-      - traefik.http.services.varnish.loadbalancer.server.port=80
+
   redis:
     image: redis:latest
-    restart: unless-stopped
     tty: true
     ports:
       - "6379:6379"
