--- a/drupal/config/sync/core.entity_view_display.node.article.rss.yml
+++ b/drupal/config/sync/core.entity_view_display.node.article.rss.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.article.body
     - field.field.node.article.comment
     - field.field.node.article.field_image
+    - field.field.node.article.field_image2
     - field.field.node.article.field_tags
     - node.type.article
   module:
@@ -25,4 +26,5 @@ hidden:
   body: true
   comment: true
   field_image: true
+  field_image2: true
   field_tags: true
