--- a/drupal/config/sync/core.entity_view_display.node.article.teaser.yml
+++ b/drupal/config/sync/core.entity_view_display.node.article.teaser.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.article.body
     - field.field.node.article.comment
     - field.field.node.article.field_image
+    - field.field.node.article.field_image2
     - field.field.node.article.field_tags
     - node.type.article
   module:
@@ -41,3 +42,4 @@ content:
 hidden:
   comment: true
   field_image: true
+  field_image2: true
