--- a/react/package.json
+++ b/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basic-starter",
+  "name": "druxt-events",
   "version": "1.7.2",
   "private": true,
   "license": "MIT",
@@ -14,7 +14,7 @@
     "@tailwindcss/typography": "^0.5.8",
     "classnames": "^2.3.2",
     "next": "^13",
-    "next-drupal": "^1.5.0",
+    "next-drupal": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.33.0"
