--- a/drupal/config/sync/core.entity_view_display.node.article.teaser.yml
+++ b/drupal/config/sync/core.entity_view_display.node.article.teaser.yml
@@ -7,10 +7,11 @@ dependencies:
     - field.field.node.article.body
     - field.field.node.article.comment
     - field.field.node.article.field_image
-    - field.field.node.article.field_image2
     - field.field.node.article.field_tags
+    - image.style.medium
     - node.type.article
   module:
+    - media
     - text
     - user
 _core:
@@ -21,10 +22,21 @@ bundle: article
 mode: teaser
 content:
   body:
-    type: text_summary_or_trimmed
+    type: text_trimmed
     label: hidden
     settings:
-      trim_length: 600
+      trim_length: 200
+    third_party_settings: {  }
+    weight: 1
+    region: content
+  field_image:
+    type: media_thumbnail
+    label: above
+    settings:
+      image_link: ''
+      image_style: medium
+      image_loading:
+        attribute: lazy
     third_party_settings: {  }
     weight: 0
     region: content
@@ -34,12 +46,12 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 10
+    weight: 2
     region: content
   links:
-    weight: 100
+    settings: {  }
+    third_party_settings: {  }
+    weight: 3
     region: content
 hidden:
   comment: true
-  field_image: true
-  field_image2: true
