--- a/drupal/config/sync/core.entity_view_display.node.event.default.yml
+++ b/drupal/config/sync/core.entity_view_display.node.event.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.event.body
+    - field.field.node.event.field_category
     - field.field.node.event.field_event_date
     - field.field.node.event.field_image
     - field.field.node.event.field_registration
@@ -25,12 +26,20 @@ content:
     third_party_settings: {  }
     weight: 101
     region: content
+  field_category:
+    type: entity_reference_label
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 105
+    region: content
   field_event_date:
     type: datetime_default
     label: above
     settings:
       timezone_override: ''
-      format_type: medium
+      format_type: short
     third_party_settings: {  }
     weight: 103
     region: content
