--- a/drupal/config/sync/core.extension.yml
+++ b/drupal/config/sync/core.extension.yml
@@ -1,11 +1,15 @@
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
 module:
+  allowed_formats: 0
+  amswap: 0
   announcements_feed: 0
   automated_cron: 0
   big_pipe: 0
   block: 0
   block_content: 0
+  block_content_permissions: 0
+  block_permissions: 0
   breakpoint: 0
   ckeditor5: 0
   comment: 0
@@ -13,7 +17,8 @@ module:
   consumers: 0
   contact: 0
   contextual: 0
-  cors_ui: 0
+  core_event_dispatcher: 0
+  custom_decoupled_settings: 0
   datetime: 0
   dblog: 0
   decoupled_preview: 0
@@ -26,10 +31,19 @@ module:
   filter: 0
   help: 0
   history: 0
+  hook_event_dispatcher: 0
   image: 0
+  inline_form_errors: 0
   jsonapi: 0
+  jsonapi_defaults: 0
   jsonapi_extras: 0
+  jsonapi_hypermedia: 0
+  jsonapi_image_styles: 0
+  jsonapi_menu_items: 0
+  jsonapi_pathauto_breadcrumbs: 0
   jsonapi_resources: 0
+  key_auth: 0
+  layout_discovery: 0
   link: 0
   media: 0
   media_library: 0
@@ -56,28 +70,38 @@ module:
   purge_queuer_coretags: 0
   purge_tokens: 0
   purge_ui: 0
+  redirect_after_login: 0
   redis: 0
+  rename_admin_paths: 0
+  rest: 0
+  restui: 0
   schemata: 0
   schemata_json_schema: 0
   search: 0
+  seckit: 0
   serialization: 0
   shortcut: 0
   simple_oauth: 0
+  simplify: 0
   subrequests: 0
   system: 0
   taxonomy: 0
+  taxonomy_access_fix: 0
   text: 0
   token: 0
   toolbar: 0
   update: 0
   user: 0
+  view_unpublished: 0
   views_ui: 0
   webform: 0
   webform_node: 0
   webform_options_limit: 0
+  webform_rest: 0
   webform_scheduled_email: 0
   webform_share: 0
   webform_ui: 0
+  menu_admin_per_menu: 1
   pathauto: 1
   views: 10
   standard: 1000
