--- a/drupal/config/sync/core.menu.static_menu_link_overrides.yml
+++ b/drupal/config/sync/core.menu.static_menu_link_overrides.yml
@@ -1,3 +1,15 @@
 _core:
   default_config_hash: CXhei_vpaZk-3f_Mj2cH0YmpK-ZpKHoSzVA3yZrDq0g
-definitions: {  }
+definitions:
+  contact__site_page:
+    enabled: true
+    menu_name: footer
+    parent: ''
+    expanded: false
+    weight: 0
+  standard__front_page:
+    weight: -50
+    menu_name: main
+    parent: ''
+    expanded: false
+    enabled: true
