--- a/drupal/config/sync/olivero.settings.yml
+++ b/drupal/config/sync/olivero.settings.yml
@@ -8,10 +8,11 @@ features:
   favicon: true
   node_user_picture: false
 logo:
+  path: 'public://logo-no-background.png'
   use_default: false
 third_party_settings:
   shortcut:
     module_link: true
 mobile_menu_all_widths: 0
-site_branding_bg_color: default
-base_primary_color: '#1b9ae4'
+site_branding_bg_color: white
+base_primary_color: '#30af5b'
