--- a/drupal/config/sync/system.date.yml
+++ b/drupal/config/sync/system.date.yml
@@ -2,7 +2,7 @@ _core:
   default_config_hash: t7clj3mzmOGrXX0HuCH5usf0vEqRtnMTBFVBIEmZ5pc
 first_day: 0
 country:
-  default: ''
+  default: FR
 timezone:
   default: Europe/Paris
   user:
