--- a/drupal/composer.json
+++ b/drupal/composer.json
@@ -24,6 +24,7 @@
         "drupal/amswap": "^3.2",
         "drupal/apigee_edge": "^3.0",
         "drupal/autologout": "^1.4",
+        "drupal/behat_ui": "^5.0@alpha",
         "drupal/big_pipe_sessionless": "^2.2",
         "drupal/block_content_permissions": "^1.11",
         "drupal/block_permissions": "^1.3",
@@ -50,12 +51,12 @@
         "drupal/jsonapi_menu_items": "^1.2",
         "drupal/jsonapi_pathauto_breadcrumbs": "^1.0",
         "drupal/jsonapi_resources": "^1.0",
-        "drupal/jsonapi_site": "^1.0",
         "drupal/jsonapi_views": "^1.1",
         "drupal/leaflet": "^10.2",
         "drupal/libraries": "^4.0",
         "drupal/login_security": "^2.0",
         "drupal/matomo": "^1.23",
+        "drupal/media_library_form_element": "^2.0",
         "drupal/menu_admin_per_menu": "^1.5",
         "drupal/metatag": "^1.26",
         "drupal/next": "^1.6",
@@ -86,7 +87,9 @@
         "drupal/simple_sitemap": "^4.1",
         "drupal/simplify": "^2.1",
         "drupal/site_audit": "^4.0@RC",
+        "drupal/social_media_links": "^2.9",
         "drupal/stop_admin": "^1.4",
+        "drupal/svg_image_field": "^2.3",
         "drupal/taxonomy_access_fix": "^4.0",
         "drupal/tmgmt": "^1.15",
         "drupal/token": "^1.13",
@@ -99,6 +102,7 @@
         "drupal/xmlsitemap": "^1.5",
         "drush/drush": "^12",
         "mnsami/composer-custom-directory-installer": "^2.0",
+        "symfony/http-client": "^6.4",
         "theodo-group/llphant": "^0.6.0"
     },
     "conflict": {
@@ -188,7 +192,11 @@
         }
     },
     "require-dev": {
+        "behat/behat": "^3.14",
         "behat/mink": "^1.11",
+        "behat/mink-extension": "*",
+        "behat/mink-goutte-driver": "^2.0",
+        "drupal/drupal-extension": "^5.0",
         "phpmd/phpmd": "^2.15",
         "phpspec/prophecy": "^1.18",
         "phpspec/prophecy-phpunit": "^2.1",
