--- a/drupal/config/sync/core.extension.yml
+++ b/drupal/config/sync/core.extension.yml
@@ -5,6 +5,7 @@ module:
   amswap: 0
   announcements_feed: 0
   automated_cron: 0
+  basic_auth: 0
   big_pipe: 0
   block: 0
   block_content: 0
@@ -42,11 +43,11 @@ module:
   jsonapi_menu_items: 0
   jsonapi_pathauto_breadcrumbs: 0
   jsonapi_resources: 0
-  key_auth: 0
   layout_discovery: 0
   link: 0
   media: 0
   media_library: 0
+  media_library_form_element: 0
   menu_link_content: 0
   menu_ui: 0
   next: 0
@@ -83,7 +84,10 @@ module:
   shortcut: 0
   simple_oauth: 0
   simplify: 0
+  social_links: 0
   subrequests: 0
+  svg_image: 0
+  svg_image_field: 0
   system: 0
   taxonomy: 0
   taxonomy_access_fix: 0
