--- a/drupal/config/sync/jsonapi_image_styles.settings.yml
+++ b/drupal/config/sync/jsonapi_image_styles.settings.yml
@@ -1,3 +1,8 @@
 _core:
   default_config_hash: wOZVD8Wsf3NSSsAU36-FVkO7zaC4TgH_Buj0Up6vHYQ
-image_styles: {  }
+image_styles:
+  medium: medium
+  thumbnail: thumbnail
+  wide: wide
+  large: '0'
+  media_library: '0'
