--- a/drupal/config/sync/simplify.global.yml
+++ b/drupal/config/sync/simplify.global.yml
@@ -1,9 +1,29 @@
 _core:
   default_config_hash: omWr4s_-ZB9DeG-rP5oY4s3Pm2uiK-guRhGg0_DHHpM
 simplify_admin: false
-simplify_nodes_global: {  }
-simplify_users_global: {  }
-simplify_comments_global: {  }
-simplify_taxonomies_global: {  }
-simplify_blocks_global: {  }
+simplify_nodes_global:
+  options: options
+  comment: comment
+  author: '0'
+  format: '0'
+  revision_information: '0'
+  meta: '0'
+  menu: '0'
+  path: '0'
+simplify_users_global:
+  format: '0'
+  status: '0'
+  timezone: '0'
+  contact: '0'
+  comment: '0'
+simplify_comments_global:
+  format: '0'
+simplify_taxonomies_global:
+  format: '0'
+  relations: '0'
+  path: '0'
+  comment: '0'
+simplify_blocks_global:
+  format: '0'
+  revision_information: '0'
 simplify_profiles_global: {  }
