--- a/drupal/config/sync/system.site.yml
+++ b/drupal/config/sync/system.site.yml
@@ -2,7 +2,7 @@ _core:
   default_config_hash: VDJxTZtQR21qB4lvOq8zszJZLvLKrSPQpdn2E3T71Ww
 langcode: en
 uuid: 57d2427d-7a45-43a6-875f-1a0797bc4e70
-name: 'Drupal events'
+name: 'Magic Events'
 mail: tayahi.molka@gmail.com
 slogan: 'Drupal events Slogan'
 page:
@@ -12,3 +12,4 @@ page:
 admin_compact_mode: false
 weight_select_max: 100
 default_langcode: en
+mail_notification: ''
