--- a/.docker/conf/php/xdebug.ini
+++ b/.docker/conf/php/xdebug.ini
@@ -1,4 +1,21 @@
-xdebug.remote_enable = 1
-xdebug.remote_autostart = 1
-xdebug.remote_connect_back = 1
-xdebug.remote_idekey = PHPSTORM
+
+
+; Enable Xdebug remote support
+xdebug.mode=debug
+xdebug.start_with_request=yes
+
+; IDE Key for PhpStorm
+xdebug.idekey=INTELLIJ
+
+
+; Port Xdebug is listening on
+xdebug.client_host=172.17.0.1
+xdebug.client_port=9000
+
+; Log file for Xdebug
+xdebug.log=/var/log/xdebug.log
+
+; Optional: Set the maximum number of array children and variable data for Xdebug to display
+xdebug.var_display_max_children = 128
+xdebug.var_display_max_data = 1024
+xdebug.var_display_max_depth = 5
