--- a/drupal/config/sync/core.extension.yml
+++ b/drupal/config/sync/core.extension.yml
@@ -20,6 +20,7 @@ module:
   contextual: 0
   core_event_dispatcher: 0
   custom_decoupled_settings: 0
+  custom_event: 0
   custom_oauth: 0
   datetime: 0
   dblog: 0
@@ -38,6 +39,7 @@ module:
   inline_form_errors: 0
   jsonapi: 0
   jsonapi_defaults: 0
+  jsonapi_event_dispatcher: 0
   jsonapi_extras: 0
   jsonapi_hypermedia: 0
   jsonapi_image_styles: 0
@@ -62,6 +64,7 @@ module:
   openapi_jsonapi: 0
   openapi_ui: 0
   openapi_ui_swagger: 0
+  openid_connect: 0
   options: 0
   page_cache: 0
   path: 0
@@ -100,6 +103,7 @@ module:
   text: 0
   token: 0
   toolbar: 0
+  typed_entity: 0
   update: 0
   user: 0
   view_unpublished: 0
@@ -114,6 +118,7 @@ module:
   workspaces: 0
   menu_admin_per_menu: 1
   pathauto: 1
+  externalauth: 10
   views: 10
   standard: 1000
 theme:
