--- a/drupal/config/sync/rest.resource.entity.user.yml
+++ b/drupal/config/sync/rest.resource.entity.user.yml
@@ -14,10 +14,11 @@ configuration:
   methods:
     - GET
     - POST
+    - PATCH
   formats:
     - 'schema_json:json'
     - json
     - schema_json
   authentication:
-    1: oauth2
-    2: cookie
+    - oauth2
+    - cookie
