--- a/drupal/composer.json
+++ b/drupal/composer.json
@@ -16,6 +16,11 @@
     ],
     "require": {
         "ext-redis": "*",
+        "behat/behat": "^3.14",
+        "behat/mink": "^1.9",
+        "behat/mink-browserkit-driver": "^2.2",
+        "behat/mink-extension": "*",
+        "behat/mink-goutte-driver": "^2.0",
         "composer/installers": "^2.2",
         "drupal/address": "^2.0",
         "drupal/admin_toolbar": "^3.4",
@@ -29,12 +34,14 @@
         "drupal/block_permissions": "^1.3",
         "drupal/config_split": "^2.0",
         "drupal/content_language_access": "^2.0@beta",
+        "drupal/core": "^10.2.7",
         "drupal/core-composer-scaffold": "^10.3",
         "drupal/core-project-message": "^10.3",
         "drupal/core-recommended": "^10.3",
         "drupal/decoupled_domain": "^1.0@beta",
         "drupal/decoupled_preview": "^1.0@beta",
-        "drupal/devel": "^5.0",
+        "drupal/devel": "^5.2",
+        "drupal/devel_generate": "^5.2",
         "drupal/dotenv": "^1.2",
         "drupal/entity_usage": "^2.0@beta",
         "drupal/environment_indicator": "^4.0",
@@ -59,10 +66,10 @@
         "drupal/menu_admin_per_menu": "^1.5",
         "drupal/metatag": "^1.26",
         "drupal/next": "^1.6",
+        "drupal/openai": "^1.0@beta",
         "drupal/openapi": "^2.1",
         "drupal/openapi_jsonapi": "^3.0",
         "drupal/openapi_ui": "^1.0@RC",
-        "drupal/openapi_ui_redoc": "^1.0",
         "drupal/openapi_ui_swagger": "^1.0",
         "drupal/openid_connect": "^1.4",
         "drupal/paragraphs": "^1.16",
@@ -93,6 +100,7 @@
         "drupal/tmgmt": "^1.15",
         "drupal/token": "^1.13",
         "drupal/typed_entity": "^4.0",
+        "drupal/user_registrationpassword": "^2.0",
         "drupal/varnish_purge": "^2.2",
         "drupal/view_unpublished": "^1.2",
         "drupal/views_bulk_operations": "^4.2",
@@ -168,6 +176,9 @@
             },
             "drupal/webform_rest": {
                 "Add API endpoint for retrieving autocomplete options": "https://www.drupal.org/files/issues/2022-10-27/3317762-2.patch"
+            },
+            "drupal/hook_event_dispatcher": {
+            "Upgrade to Drupal 10.3.1 crashes hook event dispatcher": "https://www.drupal.org/files/issues/2024-07-05/3459165-5.patch"
             }
         },
         "drupal-core-project-message": {
@@ -193,10 +204,6 @@
         }
     },
     "require-dev": {
-        "behat/behat": "^3.14",
-        "behat/mink": "^1.11",
-        "behat/mink-extension": "*",
-        "behat/mink-goutte-driver": "^2.0",
         "drupal/drupal-extension": "^5.0",
         "phpmd/phpmd": "^2.15",
         "phpspec/prophecy": "^1.18",
