--- a/drupal/config/sync/core.entity_form_display.node.event.default.yml
+++ b/drupal/config/sync/core.entity_form_display.node.event.default.yml
@@ -4,10 +4,15 @@ status: true
 dependencies:
   config:
     - field.field.node.event.body
-    - field.field.node.event.field_category
+    - field.field.node.event.field_capacity
+    - field.field.node.event.field_difficulty_level
     - field.field.node.event.field_event_date
+    - field.field.node.event.field_event_type
+    - field.field.node.event.field_location
     - field.field.node.event.field_media_image
+    - field.field.node.event.field_organizer
     - field.field.node.event.field_registration
+    - field.field.node.event.field_season
     - field.field.node.event.field_summary
     - field.field.node.event.field_tags
     - node.type.event
@@ -24,7 +29,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 121
+    weight: 7
     region: content
     settings:
       rows: 9
@@ -34,13 +39,51 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_category:
+  field_capacity:
+    type: number
+    weight: 16
+    region: content
+    settings:
+      placeholder: ''
+    third_party_settings: {  }
+  field_difficulty_level:
+    type: options_select
+    weight: 13
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_event_date:
+    type: datetime_default
+    weight: 9
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_event_type:
+    type: options_select
+    weight: 12
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_location:
+    type: options_select
+    weight: 14
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_media_image:
+    type: media_library_widget
+    weight: 8
+    region: content
+    settings:
+      media_types: {  }
+    third_party_settings: {  }
+  field_organizer:
     type: entity_reference_autocomplete
-    weight: 125
+    weight: 17
     region: content
     settings:
       match_operator: CONTAINS
@@ -48,30 +91,23 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_event_date:
-    type: datetime_default
-    weight: 123
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  field_media_image:
-    type: media_library_widget
-    weight: 121
-    region: content
-    settings:
-      media_types: {  }
-    third_party_settings: {  }
   field_registration:
     type: webform_entity_reference_select
-    weight: 124
+    weight: 10
     region: content
     settings:
       default_data: true
       webforms: {  }
     third_party_settings: {  }
+  field_season:
+    type: options_select
+    weight: 15
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_summary:
     type: text_textarea
-    weight: 126
+    weight: 11
     region: content
     settings:
       rows: 5
@@ -79,7 +115,7 @@ content:
     third_party_settings: {  }
   field_tags:
     type: entity_reference_autocomplete_tags
-    weight: 3
+    weight: 1
     region: content
     settings:
       match_operator: CONTAINS
@@ -89,34 +125,27 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 15
+    weight: 4
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 120
-    region: content
-    settings:
-      display_label: true
-    third_party_settings: {  }
-  sticky:
-    type: boolean_checkbox
-    weight: 16
+    weight: 6
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -124,7 +153,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 2
     region: content
     settings:
       match_operator: CONTAINS
@@ -132,4 +161,5 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  sticky: true
