--- a/drupal/config/sync/core.entity_view_display.node.event.teaser.yml
+++ b/drupal/config/sync/core.entity_view_display.node.event.teaser.yml
@@ -5,10 +5,15 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.event.body
-    - field.field.node.event.field_category
+    - field.field.node.event.field_capacity
+    - field.field.node.event.field_difficulty_level
     - field.field.node.event.field_event_date
+    - field.field.node.event.field_event_type
+    - field.field.node.event.field_location
     - field.field.node.event.field_media_image
+    - field.field.node.event.field_organizer
     - field.field.node.event.field_registration
+    - field.field.node.event.field_season
     - field.field.node.event.field_summary
     - field.field.node.event.field_tags
     - node.type.event
@@ -42,8 +47,13 @@ content:
     weight: 100
     region: content
 hidden:
-  field_category: true
+  field_capacity: true
+  field_difficulty_level: true
   field_event_date: true
+  field_event_type: true
+  field_location: true
   field_media_image: true
+  field_organizer: true
   field_registration: true
+  field_season: true
   field_summary: true
