--- a/drupal/config/sync/core.entity_view_display.user.user.compact.yml
+++ b/drupal/config/sync/core.entity_view_display.user.user.compact.yml
@@ -4,6 +4,8 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.user.compact
+    - field.field.user.user.field_name
+    - field.field.user.user.field_organizer_bio
     - field.field.user.user.user_picture
     - image.style.thumbnail
   module:
@@ -28,4 +30,6 @@ content:
     weight: 0
     region: content
 hidden:
+  field_name: true
+  field_organizer_bio: true
   member_for: true
