--- a/drupal/config/sync/core.extension.yml
+++ b/drupal/config/sync/core.extension.yml
@@ -1,6 +1,7 @@
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
 module:
+  address: 0
   allowed_formats: 0
   amswap: 0
   announcements_feed: 0
@@ -70,6 +71,7 @@ module:
   path: 0
   path_alias: 0
   pgsql: 0
+  phpass: 0
   purge: 0
   purge_drush: 0
   purge_processor_cron: 0
@@ -100,12 +102,14 @@ module:
   system: 0
   taxonomy: 0
   taxonomy_access_fix: 0
+  telephone: 0
   text: 0
   token: 0
   toolbar: 0
   typed_entity: 0
   update: 0
   user: 0
+  user_registrationpassword: 0
   view_unpublished: 0
   views_ui: 0
   webform: 0
@@ -118,7 +122,6 @@ module:
   workspaces: 0
   menu_admin_per_menu: 1
   pathauto: 1
-  externalauth: 10
   views: 10
   standard: 1000
 theme:
