Add sonar and sonarqube

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -134,6 +134,52 @@ services:
       - "traefik.http.routers.${PROJECT_NAME}_kafdrop.rule=Host(`kafdrop.${PROJECT_BASE_URL}`)"
       - "traefik.http.services.${PROJECT_NAME}_kafdrop.loadbalancer.server.port=9000"
 
+  sonarqube:
+      image: sonarqube:lts-community
+      depends_on:
+        - sonar_db
+      environment:
+        SONAR_JDBC_URL: jdbc:postgresql://sonar_db:5432/sonar
+        SONAR_JDBC_USERNAME: sonar
+        SONAR_JDBC_PASSWORD: sonar
+      volumes:
+        - sonarqube_conf:/opt/sonarqube/conf
+        - sonarqube_data:/opt/sonarqube/data
+        - sonarqube_extensions:/opt/sonarqube/extensions
+        - sonarqube_logs:/opt/sonarqube/logs
+        - sonarqube_temp:/opt/sonarqube/temp
+      ports:
+        - 9001:9000
+
+      labels:
+        - "traefik.http.routers.${PROJECT_NAME}_sonarqube.rule=Host(`sonarqube.${PROJECT_BASE_URL}`)"
+        - "traefik.http.services.${PROJECT_NAME}_sonarqube.loadbalancer.server.port=9000"
+      ulimits:
+        memlock:
+          soft: -1
+          hard: -1
+  sonar_db:
+    image: postgres:13
+    environment:
+      POSTGRES_USER: sonar
+      POSTGRES_PASSWORD: sonar
+      POSTGRES_DB: sonar
+    volumes:
+      - sonar_db:/var/lib/postgresql
+      - sonar_db_data:/var/lib/postgresql/data
+  sonar-scanner:
+    image: sonarsource/sonar-scanner-cli:latest
+    depends_on:
+      - sonarqube
+    volumes:
+      - .:/usr/src
 volumes:
   postgres-data: {}
   redis: {}
+  sonarqube_conf:
+  sonarqube_data:
+  sonarqube_extensions:
+  sonarqube_logs:
+  sonarqube_temp:
+  sonar_db:
+  sonar_db_data:
