--- a/drupal/web/themes/custom/storybook/storybook.info.yml
+++ b/drupal/web/themes/custom/storybook/storybook.info.yml
@@ -18,7 +18,7 @@ libraries-extend:
   core/drupal.progress:
     - storybook/progress
 description: ''
-core_version_requirement: ^10
+core_version_requirement: ^10 || ^11
 generator: 'starterkit_theme:10.3.1'
 
 components:
