--- a/drupal/composer.json
+++ b/drupal/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "ext-redis": "*",
         "composer/installers": "^2.2",
+        "cweagans/composer-patches": "^1.7",
         "drupal/address": "^2.0",
         "drupal/admin_toolbar": "^3.4",
         "drupal/adv_varnish": "^4.0",
@@ -27,15 +28,12 @@
         "drupal/big_pipe_sessionless": "^2.2",
         "drupal/block_content_permissions": "^1.11",
         "drupal/block_permissions": "^1.3",
-        "drupal/components": "^3.0@beta",
-        "drupal/composer_deploy": "^1.7",
         "drupal/config_split": "^2.0",
         "drupal/content_language_access": "^2.0@beta",
-        "drupal/core": "^10.2",
-        "drupal/core-composer-scaffold": "^10.2",
-        "drupal/core-project-message": "^10.2",
-        "drupal/core-recommended": "^10.2",
-        "drupal/decoupled_domain": "^1.0@beta",
+        "drupal/core": "^10",
+        "drupal/core-composer-scaffold": "^10",
+        "drupal/core-project-message": "^10",
+        "drupal/core-recommended": "^10",
         "drupal/decoupled_preview": "^1.0@beta",
         "drupal/decoupled_router": "^2.0",
         "drupal/devel": "^5.2",
@@ -44,9 +42,8 @@
         "drupal/entity_usage": "^2.0@beta",
         "drupal/environment_indicator": "^4.0",
         "drupal/field_group": "^3.4",
-        "drupal/hook_event_dispatcher": "^4.0@beta",
-        "drupal/imageapi_optimize": "^4.0",
-        "drupal/imageapi_optimize_binaries": "^1.0@beta",
+        "drupal/git_deploy": "^2.6",
+        "drupal/hook_event_dispatcher": "^4.0",
         "drupal/index_now": "^2.0",
         "drupal/jsonapi_boost": "^2.0",
         "drupal/jsonapi_extras": "^3.26@beta",
@@ -63,7 +60,6 @@
         "drupal/login_security": "^2.0",
         "drupal/media_library_form_element": "^2.0",
         "drupal/menu_admin_per_menu": "^1.5",
-        "drupal/metatag": "^1.26",
         "drupal/next": "^2.0@beta",
         "drupal/openai": "^1.0@beta",
         "drupal/openapi": "^2.1",
@@ -74,8 +70,7 @@
         "drupal/paragraphs": "^1.16",
         "drupal/pathauto": "^1.11",
         "drupal/perimeter": "^3.0",
-        "drupal/photoswipe": "^4.0",
-        "drupal/prod_check": "^2.0@beta",
+        "drupal/photoswipe": "^5.0",
         "drupal/purge": "^3.5",
         "drupal/purge_purger_http": "^1.2",
         "drupal/redirect": "^1.9",
@@ -99,18 +94,16 @@
         "drupal/tmgmt": "^1.15",
         "drupal/token": "^1.13",
         "drupal/typed_entity": "^4.0",
+        "drupal/upgrade_rector": "^2.0@alpha",
         "drupal/upgrade_status": "^4.3",
         "drupal/user_registrationpassword": "^2.0",
         "drupal/users_jwt": "^2.1",
-        "drupal/varnish_purge": "^2.2",
         "drupal/view_unpublished": "^1.2",
         "drupal/views_bulk_operations": "^4.2",
-        "drupal/views_taxonomy_term_name_into_id": "^1.0@RC",
         "drupal/warmer": "^2.0",
         "drupal/webform": "^6.2",
         "drupal/webform_rest": "^4.0",
-        "drupal/webprofiler": "^10.1",
-        "drupal/xmlsitemap": "^1.5",
+        "drupal/webprofiler": "^10",
         "drush/drush": "^13",
         "mnsami/composer-custom-directory-installer": "^2.0",
         "symfony/http-client": "^6.4",
@@ -172,13 +165,39 @@
         },
         "patches": {
             "drupal/webform_rest": {
-                "Add API endpoint for retrieving autocomplete options": "https://www.drupal.org/files/issues/2022-10-27/3317762-2.patch"
+                "Add API endpoint for retrieving autocomplete options": "https://www.drupal.org/files/issues/2022-10-27/3317762-2.patch",
+                "Automated Drupal 11 compatibility fixes for webform_rest": "https://www.drupal.org/files/issues/2024-03-25/webform_rest.4.1.0.rector.patch"
+
             },
             "drupal/amswap": {
-                "Automated Drupal 10 compatibility fixes": "https://www.drupal.org/files/issues/2024-03-16/amswap.3.2.1.rector.patch"
+                "Automated Drupal 11 compatibility fixes for amswap": "https://www.drupal.org/files/issues/2024-03-16/amswap.3.2.1.rector.patch"
             },
-            "drupal/block_permissions": {
-                "Automated Drupal 11 compatibility fixes for block_permissions": "https://www.drupal.org/files/issues/2024-03-16/block_permissions.8.x-1.3.rector.patch"
+            "drupal/jsonapi_user_resources": {
+                "Automated Drupal 11 compatibility fixes for jsonapi_user_resources": "https://www.drupal.org/files/issues/2024-06-18/jsonapi_user_resources.1.x-dev.rector.patch"
+            },
+            "drupal/simplify":{
+                "Automated Drupal 11 compatibility fixes for simplify": "https://www.drupal.org/files/issues/2024-03-25/simplify.2.1.0.rector.patch"
+            },
+            "drupal/redirect_after_login": {
+                "Drupal 11 compatibility": "https://www.drupal.org/files/issues/2024-07-22/redirect_after_login-3462725.patch"
+            },
+            "drupal/composer_deploy": {
+                "Automated Drupal 11 compatibility fixes for composer_deploy": "https://www.drupal.org/files/issues/2024-03-16/composer_deploy.8.x-1.7.rector.patch"
+            },
+            "drupal/hook_event_dispatcher": {
+                "Automated Drupal 11 compatibility fixes for hook_event_dispatcher": "https://www.drupal.org/files/issues/2024-07-15/hook_event_dispatcher.4.1.x-dev.rector.patch"
+            },
+            "drupal/imageapi_optimize": {
+                "utomated Drupal 11": "https://www.drupal.org/files/issues/2024-04-04/imageapi_optimize.4.x-dev.rector.patch"
+            },
+            "drupal/seo_checklist": {
+                "Automated Drupal 11 compatibility fixes for seo_checklist": "https://www.drupal.org/files/issues/2024-06-02/seo_checklist.5.2.x-dev.rector.patch"
+            },
+            "drupal/typed_entity": {
+                "Automated Drupal 11 compatibility fixes for typed_entity": "https://www.drupal.org/files/issues/2024-07-06/typed_entity.4.x-dev.rector.patch"
+            },
+            "drupal/jsonapi_user_resources": {
+                "Automated Drupal 11 compatibility fixes for jsonapi_user_resources": "https://www.drupal.org/files/issues/2024-06-18/jsonapi_user_resources.1.x-dev.rector.patch"
             }
         },
         "drupal-core-project-message": {
